[tool.poetry]
name = "trambit-api"
version = "0.1.0"
description = ""
authors = ["untill99 <gabriel.kasten@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
flask = "^3.0.3"
flask-cors = "^5.0.0"
httpx = "^0.28.0"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
